Fixed graph density in instance statistics

--- a/notebooks/graph-stats.ipynb
+++ b/notebooks/graph-stats.ipynb
@@ -68,10 +68,12 @@
     "def graph_stats(G):\n",
     "    stats = dict()\n",
     "    \n",
-    "    stats['number_of_vertices'] = G.number_of_nodes()\n",
-    "    stats['number_of_edges'] = G.number_of_edges()\n",
-    "    stats['complexity'] = G.number_of_nodes() * G.number_of_edges()\n",
-    "    stats['density'] = G.number_of_edges() / G.number_of_nodes()**2\n",
+    "    n, m = G.number_of_nodes(), G.number_of_edges()\n",
+    "    \n",
+    "    stats['number_of_vertices'] = n\n",
+    "    stats['number_of_edges'] = m\n",
+    "    stats['complexity'] = n * m\n",
+    "    stats['density'] = 2 * m / (n * (n - 1))\n",
     "    \n",
     "    stats['connected_components'] = []\n",
     "    for G_hat in (G.subgraph(c) for c in nx.connected_components(G)):\n",
