--- a/notebooks/figure-graph-atlas.ipynb
+++ b/notebooks/figure-graph-atlas.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "MAX_SIZE = 200\n",
     "\n",
-    "instances = list(map(read_metis_graph, Path(\"../data/bio\").glob(\"*.metis\")))\n",
+    "instances = list(map(read_metis_graph, Path(\"../data/bio\").glob(\"*.graph\")))\n",
     "graphs = [G for (G, S) in instances if len(G) <= MAX_SIZE]"
    ]
   },
@@ -110,9 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "plt.scatter(number_of_nodes, diameter, alpha=0.7)\n",
-    "plt.show()"
+    "duplication_divergence_instances = list(map(read_metis_graph, Path(\"../data/powerlaw-cluster/\").glob(\"*3.graph\")))"
    ]
   },
   {
@@ -121,7 +119,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist([nx.sigma(G) for G in graphs])\n",
+    "UU = nx.disjoint_union_all(G for (G, S) in duplication_divergence_instances)\n",
+    "\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(12, 12))\n",
+    "\n",
+    "# ‘dot’, ‘twopi’, ‘fdp’, ‘sfdp’, ‘circo’\n",
+    "pos = nx.nx_pydot.graphviz_layout(UU, prog=\"neato\")\n",
+    "\n",
+    "edge_color = [c for (u, v, c) in UU.edges.data('cost')]\n",
+    "edge_color = np.log1p(np.array(edge_color))\n",
+    "\n",
+    "nx.draw_networkx_nodes(UU, pos, ax=ax, node_size=40)\n",
+    "nx.draw_networkx_edges(UU, pos, ax=ax, edge_color=edge_color, edge_cmap=plt.cm.Blues)\n",
+    "\n",
     "plt.show()"
    ]
   }
