--- a/notebooks/finder-benchmark-analysis.ipynb
+++ b/notebooks/finder-benchmark-analysis.ipynb
@@ -31,7 +31,9 @@
     "                seed = experiment[\"seed\"]\n",
     "                dfs.append(pd.DataFrame([[instance, finder, name, iterations, seed, experiment[\"time_mean\"], experiment[\"time_std\"], experiment[\"count\"]]], columns=[\"instance\", \"finder\", \"name\", \"iterations\", \"seed\", \"time_mean\", \"time_std\", \"count\"]))\n",
     "\n",
-    "    return pd.concat(dfs, ignore_index=True)"
+    "    df = pd.concat(dfs, ignore_index=True)\n",
+    "    df[\"instance\"] = df[\"instance\"].str.replace(\".metis\", \".graph\")\n",
+    "    return df"
    ]
   },
   {
@@ -68,9 +70,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "paths = ['../finder_benchmark_bio_2019-08-30_CenterC4P4.yaml', '../finder_benchmark_bio_2019-08-30_NaiveC4P4.yaml']\n",
+    "paths = ['../output/finder_2019-09-11-CenterC4P4.yaml', '../output/finder_2019-09-11-NaiveC4P4.yaml']\n",
     "df = pd.concat(map(read_benchmark, paths), ignore_index=True)\n",
-    "meta_df = read_metadata('../data/bio/metadata.yaml')\n",
+    "meta_df = read_metadata('../data/bio/bio.metadata.yaml')\n",
     "df = df.join(meta_df, on='instance')"
    ]
   },
