--- a/notebooks/lower-bound-benchmark-analysis.ipynb
+++ b/notebooks/lower-bound-benchmark-analysis.ipynb
@@ -48,11 +48,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"c\"] = df[\"lower_bound\"]\n",
-    "df.replace({\"c\": {\"Greedy\": 0, \"LocalSearch\": 1, \"LinearProgram\": 2}}, inplace=True)\n",
+    "df[\"c\"] = df[\"lower_bound\"].map({\"Greedy\": 0, \"LocalSearch\": 1, \"LinearProgram\": 2})\n",
     "df[\"time_mean\"] = df[\"time_mean\"] / 1e9\n",
-    "df[\"time_std\"] = df[\"time_std\"] / 1e9\n",
-    "df"
+    "df[\"time_std\"] = df[\"time_std\"] / 1e9"
    ]
   },
   {
@@ -79,16 +77,7 @@
     "a = df[df[\"c\"] == 0]\n",
     "b = df[df[\"c\"] == 1].set_index(\"instance\")\n",
     "c = df[df[\"c\"] == 2].set_index(\"instance\")\n",
-    "df = a.join(b, on=\"instance\", lsuffix=\"_greedy\", rsuffix=\"_localsearch\").join(c, on=\"instance\", rsuffix=\"_linearprogram\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
+    "#df = a.join(b, on=\"instance\", lsuffix=\"_greedy\", rsuffix=\"_localsearch\").join(c, on=\"instance\", rsuffix=\"_linearprogram\")"
    ]
   },
   {
@@ -120,6 +109,114 @@
     "\n",
     "plt.scatter(df[\"time_mean_greedy\"], df[\"time_mean_localsearch\"])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../output/bio_solutions.yaml\", \"r\") as file:\n",
+    "    solution_docs = list(yaml.safe_load_all(file))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol_df = pd.DataFrame(solution_docs)\n",
+    "sol_df[\"instance\"] = sol_df[\"instance\"].str.replace(\".*/\", \"\")\n",
+    "sol_df[\"solution\"] = sol_df[\"solutions\"].apply(lambda x: x[0] if len(x) > 0 else None)\n",
+    "sol_df[\"time\"] = sol_df[\"time\"].apply(lambda x: x[0])\n",
+    "def f(sol):\n",
+    "    if sol is None:\n",
+    "        return -1\n",
+    "    else:\n",
+    "        return len(sol[\"edits\"])\n",
+    "sol_df[\"solution_size\"] = sol_df[\"solution\"].apply(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "df = df.join(sol_df.set_index(\"instance\"), on=\"instance\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"quality\"] = df[\"value\"] / df[\"solution_cost\"]\n",
+    "df.loc[df[\"solution_cost\"] == -1, \"quality\"] = 0\n",
+    "df.loc[df[\"solution_cost\"] == df[\"value\"], \"quality\"] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(df[\"solution_cost\"], df[\"time\"])\n",
+    "plt.show()\n",
+    "plt.scatter(df[\"solution_size\"], df[\"time\"])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for (lb, group_df) in df.groupby(\"lower_bound\"):\n",
+    "    plt.scatter(group_df[\"solution_size\"], group_df[\"quality\"], label=lb)\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(ncols=3, figsize=(12, 4), sharey=True)\n",
+    "for ax, (lb, group_df) in zip(axes, df.groupby(\"lower_bound\")):\n",
+    "    m = group_df[\"quality\"] > 0\n",
+    "    ax.scatter(group_df.loc[m, \"quality\"], group_df.loc[m, \"time_mean\"], label=lb)\n",
+    "    ax.set_ylabel(\"time (s)\")\n",
+    "    ax.set_xlabel(\"quality\")\n",
+    "    ax.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(df[\"solution_cost\"] == 0).sum(), (df[\"solution_cost\"] >= 0).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"instance\"].unique().size"
    ]
   }
  ],
