--- a/notebooks/figure-finders-example.ipynb
+++ b/notebooks/figure-finders-example.ipynb
@@ -96,7 +96,7 @@
     "    nx.draw_networkx_nodes(P, pos, ax=ax, nodelist=old_nodes, node_color=\"dimgrey\", node_size=300)\n",
     "    nx.draw_networkx_nodes(P, pos, ax=ax, nodelist=new_nodes, node_color=\"lightgrey\", node_size=400)\n",
     "    nx.draw_networkx_edges(P, pos, ax=ax, width=w, edgelist=fixed, edge_color=\"black\")\n",
-    "    nx.draw_networkx_edges(P, pos, ax=ax, width=w, edgelist=green, edge_color=\"green\")\n",
+    "    nx.draw_networkx_edges(P, pos, ax=ax, width=w, edgelist=green, edge_color=\"limegreen\")\n",
     "    nx.draw_networkx_edges(P, pos, ax=ax, width=w, edgelist=red, style=\"dashed\", edge_color=\"red\")\n",
     "    nx.draw_networkx_edges(P, pos, ax=ax, width=w, edgelist=dotted, style=\"dotted\")\n",
     "    nx.draw_networkx_labels(P, pos, labels={v: f\"${name}$\" for v, name in zip(new_nodes, \"uvwxyz\")}, font_size=16)\n",
