--- a/notebooks/search-strategy.ipynb
+++ b/notebooks/search-strategy.ipynb
@@ -13,7 +13,8 @@
     "from glob import glob\n",
     "from pathlib import Path\n",
     "from itertools import product\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.gridspec as gridspec"
    ]
   },
   {
@@ -165,9 +166,16 @@
    "source": [
     "for search_strategy, a in df[(df[\"dataset\"] == \"bio\") & (df[\"lower_bound\"] == \"SortedGreedy\") & (df[\"selector\"] == \"MostAdjacentSubgraphs\")].groupby(\"search_strategy\"):\n",
     "    if len(a) == 0 or a[\"calls\"].apply(len).max() <= 1: continue\n",
-    "    fig, (ax1, ax2) = plt.subplots(figsize=(8, 4), nrows=2, sharex=True, gridspec_kw=dict(height_ratios=[4/5, 1/5]))\n",
+    "    fig, (ax1, ax2) = plt.subplots(figsize=(6, 2.5), nrows=2, sharex=True, gridspec_kw=dict(height_ratios=[4/5, 1/5]))\n",
     "    ax1.set_yscale(\"log\")\n",
     "    ax1.grid(True)\n",
+    "    \n",
+    "    for ax in (ax1, ax2):\n",
+    "        ax.set_anchor(\"W\")\n",
+    "        print(ax.get_position())\n",
+    "    \n",
+    "    #gs = gridspec.GridSpec(2, 1)\n",
+    "    #gs.update(wspace=0.0, hspace=0.05)\n",
     "    \n",
     "    xs = a[\"calls\"].apply(lambda x: pd.Series(np.exp(np.diff(np.log(x)))))\n",
     "    #xs = a[\"stats\"].apply(lambda x: pd.Series(x[\"calls\"]))\n",
@@ -197,10 +205,26 @@
     "    ax2.set_xlabel(\"Search step\")\n",
     "    ax2.set_ylabel(\"Graphs [%]\")\n",
     "    #ax1.set_title(search_strategy + \"\\n\", fontsize=12)\n",
-    "    legend = fig.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))\n",
+    "    \n",
+    "    \n",
+    "    legend = fig.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5), fontsize=\"small\")\n",
     "    fig.tight_layout()\n",
+    "    plt.subplots_adjust(wspace=0, hspace=0.2)\n",
+    "    \n",
+    "    for ax in (ax1, ax2):\n",
+    "        print(ax.get_position())\n",
+    "    \n",
     "    plt.savefig(f\"growth-ratio-{search_strategy}-step_max-{xs.shape[1]}-median-{xs.median()[:max_step_cutoff].mean():.3}.pdf\", bbox_extra_artists=(legend,), bbox_inches=\"tight\")\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "?plt.legend"
    ]
   },
   {
