Cleaned up notebook directory.

--- a/notebooks/09 evaluation.ipynb
+++ b/notebooks/09 evaluation.ipynb
@@ -330,7 +330,27 @@
     "        plt.savefig(path)\n",
     "    plt.show()\n",
     "\n",
-    "plot_matrix_scatter(X_unweighted)"
+    "plot_matrix_scatter(X_weighted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "plt.scatter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_weighted[1]"
    ]
   }
  ],
@@ -350,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
