--- a/notebooks/figures/figure-subgraph-packing.ipynb
+++ b/notebooks/figures/figure-subgraph-packing.ipynb
@@ -25,8 +25,7 @@
    "source": [
     "G = nx.Graph()\n",
     "\n",
-    "edges = [(1, 2), (1, 3), (3, 4), (4, 5)]\n",
-    "marked_edges = [(0, 1)]\n",
+    "edges = [(0, 1), (1, 2), (1, 3), (3, 4), (4, 5)]\n",
     "non_edges = [(0, 2), (0, 3), (1, 4), (3, 5)]\n",
     "\n",
     "G.add_edges_from(edges)\n",
@@ -34,7 +33,11 @@
     "G.add_edges_from(non_edges)\n",
     "\n",
     "\n",
-    "for name, packing in [(\"none\", []), (\"a\", [(0, 1, 2), (0, 1, 3), (3, 4, 5)]), (\"b\", [(0, 1, 2), (1, 3, 4)])]:\n",
+    "for name, packing, marked_edges in [\n",
+    "    (\"empty\", [], []),\n",
+    "    (\"vertex-pair-disjoint-marked\", [(0, 1, 2), (0, 1, 3), (3, 4, 5)], [(0, 1)]),\n",
+    "    (\"vertex-pair-disjoint\", [(0, 1, 2), (1, 3, 4)], []),\n",
+    "    (\"vertex-disjoint\", [(0, 1, 2), (3, 4, 5)], [])]:\n",
     "    fig, ax = plt.subplots(figsize=(4, 3))\n",
     "    ax.margins(0.15)\n",
     "    ax.set_aspect(\"equal\")\n",
@@ -83,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
